--- a/Car_price_prediction.ipynb
+++ b/Car_price_prediction.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "car = pd.read_csv('CarPrice_Assignment.csv')"
+    "car = pd.read_csv('Car_Price_dataset.csv')"
    ]
   },
   {
